<resources>
    <string name="app_name">PennyDrop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pick_players">Pick Players Fragment</string>
    <string name="game_fragment">Game Fragment</string>
    <string name="game">Game</string>
    <string name="players">Players</string>
    <string name="playButton">Play Button</string>
    <string name="player_name">Player Name</string>
    <string name="roll">Roll</string>
    <string name="or">OR</string>
    <string name="pass">Pass</string>
    <string name="coin_icon">coin</string>
    <string name="coins_left">coin(s) left</string>
    <string name="na">Unknown</string>
    <string name="rankings_list">Rankings</string>
    <string name="player_type_image">type of the player</string>
    <string name="games_played">games played</string>
    <string name="settings">Settings</string>
    <string name="starting_penny_count">Initial value</string>
    <string name="starting_penny_count_new_game">Setting the initial value of the penny\'s quantity</string>
    <string name="fast_ai_summary">Change the speed of the AI\'s turn</string>
    <string name="fast_ai">AI without delay</string>
    <string name="app_theme">Theme</string>
    <string name="theme_mode">Theme customization</string>
    <string name="about_app_summary">Describe the app and the links to the resources</string>
    <string name="about_penny_drop">Penny Drop Description</string>
    <string name="pick_players_view">Pick Players</string>
    <string name="fragment_game_view">Game</string>
    <string name="rankings_fragment">Ranking</string>
    <string name="about_penny_drop_view">About Penny Drop</string>

    <string name="penny_drop_created_by">The <i>Penny Drop</i> app was created by Michael Fazio for the Pragmatic Bookshelf title
    <a href="https://pragrog.com/titles/mfjetpack">"Kotlin and Android Development featuring Jetpack"</a></string>

    <string name="penny_drop_icons">The coin and six-sided die icons are from the Material Design Icons collected</string>
</resources>