<?xml version="1.0" encoding="utf-8"?>

<!--    fragments' navigation
        app:startDestination - start point-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pickPlayersFragment">

    <!--    adding the fragment and his ID in navigation
    android:name - name of the package and the class
    android:label - XML files
     android:id - ID from the menu navigation.xml-->
    <fragment
        android:id="@+id/pickPlayersFragment"
        android:name="com.bignerdranch.android.pennydrop.fragments.PickPlayersFragment"
        android:label="@string/pick_players_view"/>

    <!--    adding the fragment and his ID in navigation
    android:name - name of the package an d the class
    android:label - XML files
     android:id - ID from the menu navigation.xml-->
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.bignerdranch.android.pennydrop.fragments.GameFragment"
        android:label="@string/fragment_game_view"/>

    <fragment
        android:id="@+id/rankingsFragment"
        android:name="com.bignerdranch.android.pennydrop.fragments.RankingsFragment"
        android:label="@string/rankings_fragment"/>

<!--    settings fragment-->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.bignerdranch.android.pennydrop.fragments.SettingsFragment"
        android:label="@string/settings"/>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.bignerdranch.android.pennydrop.fragments.AboutFragment"
        android:label="@string/about_penny_drop_view"/>

</navigation>